@@ -2,6 +2,40 @@
 Destination=modest
 Summary=tana_fi_emails
 Body=tana_fi_latest
-Icon=qgn_list_messagin
+Icon=general_email
 D-Bus-Call=com.nokia.osso_email /com/nokia/osso_email com.nokia.osso_email open_inbox
 Text-Domain=maemo-af-desktop
+
+[chat-message]
+Destination=FIXME
+Summary=tana_fi_chats
+Body=tana_fi_latest
+Icon=general_chat
+D-Bus-Call=FIXME
+Text-Domain=maemo-af-desktop
+
+[sms-message]
+Destination=FIXME
+Summary=tana_fi_sms_multiple
+Body=tana_fi_latest
+Icon=general_sms
+D-Bus-Call=FIXME
+Text-Domain=maemo-af-desktop
+
+[auth-request]
+Destination=FIXME
+Summary=tana_fi_authorizations
+Body=tana_fi_latest
+Icon=tasklaunch_authorization_response
+D-Bus-Call=FIXME
+Text-Domain=maemo-af-desktop
+
+[missed-call]
+Destination=FIXME
+Summary=tana_fi_missed_calls
+Body=tana_fi_latest
+Icon=general_missed
+D-Bus-Call=FIXME
+Text-Domain=maemo-af-desktop
+
+
